feat(launcher): 无 JDK 环境可运行——发布包自带 jlink 精简运行时，脚本优先使用
- jlink 生成精简运行时 release/runtime（86MB，模块 java.base,desktop,naming,sql,unsupported）
- start-frt.sh/bat：优先用本地 runtime/bin/java，其次系统 JDK，都没有时给出明确提示
- README 新增"无 JDK 环境运行"章节（含各平台生成 runtime 的 jlink 命令）
- 实测：release 内 runtime 启动正常（无 JDK 场景）